; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_setparent_esysclk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-s3c2443/extr_clock.c_s3c2443_setparent_esysclk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { %struct.clk* }

@S3C2443_CLKSRC = common dso_local global i32 0, align 4
@clk_epll = common dso_local global %struct.clk zeroinitializer, align 8
@S3C2443_CLKSRC_ESYSCLK_EPLL = common dso_local global i64 0, align 8
@clk_epllref = common dso_local global %struct.clk zeroinitializer, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk*, %struct.clk*)* @s3c2443_setparent_esysclk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c2443_setparent_esysclk(%struct.clk* %0, %struct.clk* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.clk*, align 8
  %5 = alloca %struct.clk*, align 8
  %6 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %4, align 8
  store %struct.clk* %1, %struct.clk** %5, align 8
  %7 = load i32, i32* @S3C2443_CLKSRC, align 4
  %8 = call i64 @__raw_readl(i32 %7)
  store i64 %8, i64* %6, align 8
  %9 = load %struct.clk*, %struct.clk** %5, align 8
  %10 = icmp eq %struct.clk* %9, @clk_epll
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i64, i64* @S3C2443_CLKSRC_ESYSCLK_EPLL, align 8
  %13 = load i64, i64* %6, align 8
  %14 = or i64 %13, %12
  store i64 %14, i64* %6, align 8
  br label %27

15:                                               ; preds = %2
  %16 = load %struct.clk*, %struct.clk** %5, align 8
  %17 = icmp eq %struct.clk* %16, @clk_epllref
  br i1 %17, label %18, label %23

18:                                               ; preds = %15
  %19 = load i64, i64* @S3C2443_CLKSRC_ESYSCLK_EPLL, align 8
  %20 = xor i64 %19, -1
  %21 = load i64, i64* %6, align 8
  %22 = and i64 %21, %20
  store i64 %22, i64* %6, align 8
  br label %26

23:                                               ; preds = %15
  %24 = load i32, i32* @EINVAL, align 4
  %25 = sub nsw i32 0, %24
  store i32 %25, i32* %3, align 4
  br label %34

26:                                               ; preds = %18
  br label %27

27:                                               ; preds = %26, %11
  %28 = load i64, i64* %6, align 8
  %29 = load i32, i32* @S3C2443_CLKSRC, align 4
  %30 = call i32 @__raw_writel(i64 %28, i32 %29)
  %31 = load %struct.clk*, %struct.clk** %5, align 8
  %32 = load %struct.clk*, %struct.clk** %4, align 8
  %33 = getelementptr inbounds %struct.clk, %struct.clk* %32, i32 0, i32 0
  store %struct.clk* %31, %struct.clk** %33, align 8
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %27, %23
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i64 @__raw_readl(i32) #1

declare dso_local i32 @__raw_writel(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
